# TheTempleProject_Website

./: .gitignore  Cargo.toml  LICENSE  Trunk.toml  cursorChatHistory.md  docker-compose.yml  index.css  index.html  package-lock.json  package.json  readme.md  tasks.md  vercel.json
backend/: Cargo.toml  Dockerfile  Dockerfile.bak
backend/src/: lib.rs  main.rs  request_database.rs  return_code.rs
backend/src/database_ctl/: directory.rs  get_line.rs  mod.rs  request_test.rs
frontend/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  Trunk.toml  docker-start.sh  dockerfile  index.html  nginx.conf  package-lock.json  package.json  readme.md  start-docker.sh  trunk.service
frontend/nginx/: nginx.conf
frontend/public/CV_information/: ExhibitionExperience.csv
frontend/src/: api.rs  app.rs  lib.rs  main.rs  types.rs
frontend/src/components/: button_get.rs  detail_panel.rs  footer.rs  header.rs  item.rs  keyboard_handlers.rs  mobile.rs  mod.rs  mouse_handlers.rs  overviewA.rs  overviewB.rs  overview_a.rs  overview_b.rs  present_column.rs  preview.rs  text_get.rs  title.rs
frontend/src/components/body/: detail.rs  mod.rs  overview.rs
frontend/src/components/desktop/: layout.rs  mod.rs
frontend/src/components/mobile/: detail_pane.rs  header.rs  layout.rs  mod.rs
frontend/src/pages/: home.rs  home_desktop_layout.rs  home_logic.rs  home_mobile_layout.rs  mod.rs
frontend/src/pages/home/: logic.rs
frontend/src/pages/subpages/: content.rs  mod.rs  (+2 more)
frontend/src/utils/: api.rs  mod.rs  mouse.rs
frontend/style/: input.css  output.css
(+60 files in other folders)
