[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.3.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
