[package]
name = "TheTempleProject"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
leptos = { version = "0.7.7", features = ["csr"] }
leptos_router = "0.7.8"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

