[package]
name = "TheTempleProject"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
leptos = { version = "0.8.12", features = ["csr"] }
leptos_router = "0.8.9"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "HtmlElement", "Location"] }

